# sunrise_X3_BPU

dnn_body_detect/: CMakeLists.txt
dnn_body_detect/include/: body_detect.h
dnn_body_detect/src/: body_detect.cpp  main.cpp
dnn_node_lib/: CMakeLists.txt
dnn_node_lib/src/: dnn_node.cpp  dnn_node_impl.cpp
dnn_node_lib/src/util/output_parser/classification/: ptq_classification_output_parser.cpp
dnn_node_lib/src/util/output_parser/detection/: fasterrcnn_output_parser.cpp  fcos_output_parser.cpp  ptq_efficientdet_output_parser.cpp  ptq_ssd_output_parser.cpp  ptq_yolo2_output_parser.cpp  ptq_yolo3_darknet_output_parser.cpp  ptq_yolo5_output_parser.cpp
dnn_node_lib/src/util/output_parser/segmentation/: ptq_unet_output_parser.cpp
